--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://arodriguezipinnovatech:S3f6vdLqpa6egPSn@bootcamp110.djjsv.mongodb.net/?retryWrites=true&w=majority&appName=Bootcamp110
+MONGO_URI=mongodb+srv://arodriguezipinnovatech:S3f6vdLqpa6egPSn@Pruebas.djjsv.mongodb.net/?retryWrites=true&w=majority&appName=Pruebas
