--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://arodriguezipinnovatech:S3f6vdLqpa6egPSn@Pruebas.djjsv.mongodb.net/?retryWrites=true&w=majority&appName=Pruebas
+MONGO_URI=mongodb+srv://andrescaperaduque:2F3oE3jFgmx2Sk4o@andyproyectos.snch5.mongodb.net/?retryWrites=true&w=majority&appName=ANDYproyectos
